--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@ircam/sc-scheduling": "^0.1.6",
     "@soundworks/core": "^4.0.0-alpha.0",
     "@soundworks/helpers": "^1.0.0-alpha.2",
+    "@soundworks/plugin-checkin": "^2.0.0-alpha.0",
+    "@soundworks/plugin-sync": "^2.0.0-alpha.3",
+    "install": "^0.13.0",
     "json5": "^2.2.2",
     "lit": "^3.0.2",
-    "node-web-audio-api": "^0.15.0"
+    "node-web-audio-api": "^0.15.0",
+    "npm": "^10.4.0"
   },
   "devDependencies": {
     "@ircam/eslint-config": "^1.2.1",
