--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ircam/sc-audio": "^0.4.0",
     "@ircam/sc-components": "^3.0.0-alpha.44",
     "@ircam/sc-loader": "^1.0.0-alpha.1",
     "@ircam/sc-scheduling": "^0.1.6",
@@ -29,7 +30,7 @@
     "install": "^0.13.0",
     "json5": "^2.2.2",
     "lit": "^3.0.2",
-    "node-web-audio-api": "^0.21.1",
+    "node-web-audio-api": "^1.0.0",
     "npm": "^10.4.0"
   },
   "devDependencies": {
